Add manual application sync button (#1207)
* Initial implementation of sync apps

Signed-off-by: sahare <sahare@redhat.com>

* Move sync to overview cards

Signed-off-by: sahare <sahare@redhat.com>

* Handle error and success messages

Signed-off-by: sahare <sahare@redhat.com>

* Remove manual refresh annotation from yaml editor

Signed-off-by: sahare <sahare@redhat.com>

* Add back annotations

Signed-off-by: sahare <sahare@redhat.com>

* Update texts

Signed-off-by: sahare <sahare@redhat.com>

* Update unit tests

Signed-off-by: sahare <sahare@redhat.com>

* call ui data refresh only when new data is received on query

Signed-off-by: Valentina Birsan <vbirsan@redhat.com>

* update fn definition

Signed-off-by: Valentina Birsan <vbirsan@redhat.com>

* Add sync progress indicator

Signed-off-by: sahare <sahare@redhat.com>

* Fix webpackChunkName for sync modal

Signed-off-by: sahare <sahare@redhat.com>

* Scroll subscription topology node into view

Signed-off-by: sahare <sahare@redhat.com>

* resolve merge conflicts

Signed-off-by: sahare <sahare@redhat.com>

Co-authored-by: Valentina Birsan <vbirsan@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -13,6 +13,8 @@ action = Action
 actions.cancel= Cancel
 actions.create.application = Create application
 actions.create.application.access.denied = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
+actions.sync.application = Sync application
+actions.sync.application.access.denied = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 actions.save = Save
 actions.searchResources = Find resources
 
@@ -186,6 +188,15 @@ dashboard.card.overview.cards.namespace = Namespace
 dashboard.card.overview.cards.namespace.argo.tooltip = Namespace where the selected Argo application resources are deployed.
 dashboard.card.overview.cards.server = Server
 dashboard.card.overview.cards.server.tooltip = Cluster where the selected Argo application resources are deployed.
+dashboard.card.overview.cards.argo.synced = Last reconciled
+dashboard.card.overview.cards.synced = Last sync requested
+dashboard.card.overview.cards.argo.lastSynced.tooltip = Date and time of the most recent reconcile for application resources.
+dashboard.card.overview.cards.lastSynced.tooltip = Date and time of the most recent sync request for application resources.
+dashboard.card.overview.cards.sync = Sync
+dashboard.card.overview.cards.sync.success = Sync request submitted
+dashboard.card.overview.cards.sync.error = Sync request failed
+dashboard.card.overview.cards.sync.success.body = The application sync request was submitted successfully.
+dashboard.card.overview.cards.sync.error.body = The application sync request failed to submit. Try again.
 dashboard.card.overview.cards.repoResource.label = Repository resource
 dashboard.card.overview.cards.search.argocd.launch = Launch Argo editor
 dashboard.card.overview.cards.search.argocd.apps = Search all related applications
@@ -330,6 +341,9 @@ modal.remove.application.shared.resources = This application uses the following 
 modal.remove.application.child.resources =  This subscription deploys the following resources, which will be removed:
 modal.remove.application.sibling.resources = Shared with:
 modal.remove.confirm = Removing {0} is irreversible. Are you sure that you want to continue?
+modal.sync-hcmapplication.heading = Sync application
+modal.sync-hcmapplication.label = Application
+modal.sync.confirm = Synchronize application resources with the source repository
 modal.resource-filter.label = Resource Filter
 
 name.label = Name
