--- a/tests/cypress/templates/secret_yaml/ansible-secret.yaml
+++ b/tests/cypress/templates/secret_yaml/ansible-secret.yaml
@@ -6,7 +6,7 @@ kind: Secret
 metadata:
   labels:
     cluster.open-cluster-management.io/cloudconnection: ""
-    cluster.open-cluster-management.io/provider: ans
+    cluster.open-cluster-management.io/type: ans
   name: ansible-tower-secret
   namespace: default
 type: Opaque
