Add subfolder path for object bucket repositories
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -19,14 +19,15 @@ actions.save = Save
 actions.searchResources = Find resources
 
 app.enter.access.token= Optional: Enter the Git access token
-app.enter.accesskey=Optional: Enter the object store access key
+app.enter.accesskey=Enter the object store access key
 app.enter.helmrepo.chart.name=Enter name of the target Helm chart
 app.enter.helmrepo.package.alias=Enter the alias name of the target Helm chart
 app.enter.helmrepo.package.version=Optional: Enter the version or versions for the deployable
 app.enter.helmrepo.password= Optional: Enter the Helm repository password
 app.enter.helmrepo.username=Optional: Enter the Helm repository user name
-app.enter.secretkey=Optional: Enter the object store secret key
-app.enter.region=Optional: Enter the AWS region of the S3 bucket 
+app.enter.secretkey=Enter the object store secret key
+app.enter.region=Optional: Enter the AWS region of the S3 bucket
+app.enter.subfolder=Optional: Enter the Amazon S3 or MinIO subfolder bucket path
 app.enter.select.ansibleSecretName=Select an existing secret from the list.
 app.enter.select.branch=Optional: Enter or select a branch
 app.enter.select.github.url=Enter or select a Git URL
@@ -63,6 +64,7 @@ channel.type.label.targetRevision = Revision
 channel.type.label.noData = Not selected
 channel.type.label.package = Chart name
 channel.type.label.packageFilterVersion = Package version
+channel.type.label.bucketPath = Subfolder
 channel.type.namespace = Namespace
 channel.type.namespace = Namespace
 channel.type.objectbucket = Object storage
@@ -130,6 +132,7 @@ creation.app.namespace = Namespace
 creation.app.namespace.name = Namespace
 creation.app.objectstore.accesskey = Access key
 creation.app.objectstore.secretkey = Secret key
+creation.app.objectstore.subfolder = Subfolder
 creation.app.objectstore.region = Region
 creation.app.objectstore.url = URL
 creation.app.objectstore.secret = Secret name
@@ -343,7 +346,7 @@ modal.remove.application.sibling.resources = Shared with:
 modal.remove.confirm = Removing {0} is irreversible. Are you sure that you want to continue?
 modal.sync-hcmapplication.heading = Sync application
 modal.sync-hcmapplication.label = Application
-modal.sync.confirm = Synchronize application resources with the source repository
+modal.sync.confirm = Synchronize application resources with the source repository.
 modal.resource-filter.label = Resource Filter
 
 name.label = Name
@@ -658,6 +661,7 @@ tooltip.creation.app.namespace.name = The name of the namespace repository.
 tooltip.creation.app.objectstore.accesskey = The access key for accessing the object store.
 tooltip.creation.app.objectstore.secretkey = The secret key for accessing the object store.
 tooltip.creation.app.objectstore.region = The AWS Region of the S3 bucket. This field is required for Amazon S3 buckets only.
+tooltip.creation.app.objectstore.subfolder = The Amazon S3 or MinIO subfolder bucket path. This field is optional for Amazon S3 and MinIO only.
 tooltip.creation.app.objectstore.url = The URL path for the object store.
 tooltip.creation.app.objectstore.secret = The name of the secret that is used for authentication by this repository.
 tooltip.creation.app.settings.clusterSelector=Deploy application resources only on clusters matching specified labels
