Update modals look based on PF guidlines
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -302,36 +302,10 @@ load.app.info.notfound=Application {0} not found. If the application was just cr
 load.app.cluster.offline=This application is created on cluster {0}, which is currently offline. Make sure the cluster is online before accessing this application.
 
 modal.button.cancel = Cancel
-modal.button.submit = Submit
-modal.edit-hcmapplication.heading = Edit application
-modal.edit-hcmapplication.label = Edit application
-modal.edit-hcmchannel.heading = Edit channel
-modal.edit-hcmchannel.label = Edit channel
-modal.edit-hcmplacementrule.heading = Edit placement rule
-modal.edit-hcmsubscription.heading = Edit subscription
-modal.edit-hcmsubscription.label = Edit subscription
-modal.edit-queryapplications.heading = Edit application
-modal.edit-queryapplications.label = Edit application
-modal.edit.resource.confirmation = If you save changes to a resource, it might affect running applications that are using that resource.
-modal.edit.resource.header = Save changes
+modal.remove.submit = Delete
 modal.errors.querying.resource = An unexpected error occurred while retrieving the requested resource. This resource might no longer exist.
-modal.formfield.clusterLabels= Cluster labels
-modal.formfield.clusterNames= Cluster names
-modal.formfield.name = Name
 modal.remove-hcmapplication.heading = Delete application
 modal.remove-hcmapplication.label = Application
-modal.remove-hcmchannel.heading = Delete channel
-modal.remove-hcmchannel.label = Channel
-modal.remove-hcmplacementrule.heading = Delete placement rule
-modal.remove-hcmplacementrule.label = Placement rule
-modal.remove-hcmpod.heading = Remove pod
-modal.remove-hcmpod.label = Pod
-modal.remove-hcmsubscription.heading = Delete subscription
-modal.remove-hcmsubscription.label = Subscription
-modal.remove-kuberesource.heading = Remove resource
-modal.remove-kuberesource.label = Kubernetes resource
-modal.remove-queryapplications.heading = Delete application
-modal.remove-queryapplications.label = Application
 modal.remove-querychannels.heading = Delete channel
 modal.remove-querychannels.label = Channel
 modal.remove-queryplacementrules.heading = Delete placement rule
@@ -347,6 +321,7 @@ modal.remove.confirm = Removing {0} is irreversible. Are you sure that you want 
 modal.sync-hcmapplication.heading = Sync application
 modal.sync-hcmapplication.label = Application
 modal.sync.confirm = Synchronize application resources with the source repository.
+modal.sync.submit = Synchronize
 modal.resource-filter.label = Resource Filter
 
 name.label = Name
