Update label keys for modals
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -304,8 +304,8 @@ load.app.cluster.offline=This application is created on cluster {0}, which is cu
 modal.button.cancel = Cancel
 modal.remove.submit = Delete
 modal.errors.querying.resource = An unexpected error occurred while retrieving the requested resource. This resource might no longer exist.
-modal.remove-hcmapplication.heading = Delete application
-modal.remove-hcmapplication.label = Application
+modal.remove-queryapplications.heading = Delete application
+modal.remove-queryapplications.label = Application
 modal.remove-querychannels.heading = Delete channel
 modal.remove-querychannels.label = Channel
 modal.remove-queryplacementrules.heading = Delete placement rule
@@ -318,8 +318,8 @@ modal.remove.application.shared.resources = This application uses the following 
 modal.remove.application.child.resources =  This subscription deploys the following resources, which will be removed:
 modal.remove.application.sibling.resources = Shared with:
 modal.remove.confirm = Removing {0} is irreversible. Are you sure that you want to continue?
-modal.sync-hcmapplication.heading = Sync application
-modal.sync-hcmapplication.label = Application
+modal.sync-queryapplications.heading = Sync application
+modal.sync-queryapplications.label = Application
 modal.sync.confirm = Synchronize application resources with the source repository.
 modal.sync.submit = Synchronize
 modal.resource-filter.label = Resource Filter
