--- a/Dockerfile.cypress
+++ b/Dockerfile.cypress
@@ -7,16 +7,10 @@ FROM quay.io/kcormier/cypress-included:latest as production
 
 USER root
 
-COPY --from=builder /opt/app-root/src/go/bin/yq /usr/bin/yq
-
-WORKDIR /usr/src/app
-
-# copy dependencies needed for Cypress tests
-COPY package.json .
-COPY cypress.json .
-COPY download-clis.sh .
-COPY cypress ./cypress
-COPY start-cypress-tests.sh .
+RUN mkdir -p /opt/app-root/src/application-ui
+WORKDIR /opt/app-root/src/application-ui
+COPY tests ./tests
+WORKDIR /opt/app-root/src/application-ui/tests
 
 RUN npm install 
 
