Update remove modal titles
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -306,20 +306,20 @@ load.app.cluster.offline=This application is created on cluster {0}, which is cu
 modal.button.cancel = Cancel
 modal.remove.submit = Delete
 modal.errors.querying.resource = An unexpected error occurred while retrieving the requested resource. This resource might no longer exist.
-modal.remove-queryapplications.heading = Delete application
+modal.remove-queryapplications.heading = Permanently delete {0} application?
 modal.remove-queryapplications.label = Application
-modal.remove-querychannels.heading = Delete channel
+modal.remove-querychannels.heading = Permanently delete {0} channel?
 modal.remove-querychannels.label = Channel
-modal.remove-queryplacementrules.heading = Delete placement rule
+modal.remove-queryplacementrules.heading = Permanently delete {0} placement rule?
 modal.remove-queryplacementrules.label = Placement rule
-modal.remove-querysubscriptions.heading = Delete subscription
+modal.remove-querysubscriptions.heading = Permanently delete {0} subscription?
 modal.remove-querysubscriptions.label = Subscription
-modal.remove.application.confirm = Removing {0} is irreversible. Choose {1} to delete {0} and all related resources.
+modal.remove.application.confirm = Select {1} to delete {0} and all related resources.
 modal.remove.application.resources = Remove application related resources
 modal.remove.application.shared.resources = This application uses the following shared resources, which are not removable:
 modal.remove.application.child.resources =  This subscription deploys the following resources, which will be removed:
 modal.remove.application.sibling.resources = Shared with:
-modal.remove.confirm = Removing {0} is irreversible. Are you sure that you want to continue?
+modal.remove.confirm = Are you sure that you want to continue?
 modal.sync-queryapplications.heading = Sync application
 modal.sync-queryapplications.label = Application
 modal.sync.confirm = Synchronize application resources with the source repository.
