Refactor the tooltip
Signed-off-by: chenz4027 <magchen@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -613,7 +613,7 @@ timeWindow.label.missing.data = Go to the Editor tab to view time window informa
 
 tooltip.channel.type.helmrepo = Use a Helm repository
 tooltip.channel.type.objectbucket = Use a bucket from an object storage repository
-tooltip.creation.app.ansibleSecretName = If using Ansible pre or post tasks, enter the Ansible Tower secret name to be used by these tasks. Create new secret or select from the existing secrets defined in the application namespace. 
+tooltip.creation.app.ansibleSecretName = If using Configure automation for prehook and posthook tasks, select the Ansible Automation Platform credential. Click the Add credentials tab to create new secret.
 tooltip.creation.app.channel.git = Use a Git repository
 tooltip.creation.app.existingRuleCombo=Use placement rules already created in the application namespace
 tooltip.creation.app.github.accessid = The access token if this is a private Git repository and requires connection.
