--- a/tests/cypress/templates/argocd_yaml/argocd-resource.yaml
+++ b/tests/cypress/templates/argocd_yaml/argocd-resource.yaml
@@ -3,6 +3,7 @@ kind: ArgoCD
 metadata:
   name: argocd
   namespace: argocd
-  labels:
-    example: basic
-spec: {}
+spec:
+  server:
+    route:
+      enabled: true
