Enable new argocd setup script
Signed-off-by: sahare <sahare@redhat.com>

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -1,7 +1,7 @@
 ---
 argo:
   data:
-    - enable: false
+    - enable: true
       name: helloworld-argo-app-1
       namespace: openshift-gitops
       deployedNamespace: argo-test-ns-1
