--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -1,10 +1,10 @@
 ---
 argo:
   data:
-    - enable: false
+    - enable: true
       name: helloworld-argo-app-1
-      namespace: argocd
-      deployedNamespace: argo-ns-1
+      namespace: openshift-gitops
+      deployedNamespace: argo-test-ns-1
       type: git
       successNumber: 3
       config:
