--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -346,6 +346,7 @@ placeholder.filterInput.tags = Add filter tags...
 prop.details.section.service=Service Details
 prop.details.section=Details
 prop.details.section.cluster=Select a cluster to view details
+prop.details.section.cluster.notselected=Not selected by placement rule
 prop.warning.section=Warning
 
 props.show.argocd.editor=Launch Argo editor
