Synchronize Dockerfiles for old upstream and Prow
Signed-off-by: Kevin Cormier <kcormier@redhat.com>

--- a/Dockerfile.prow
+++ b/Dockerfile.prow
@@ -6,12 +6,37 @@ WORKDIR /opt/app-root/src/application-ui
 COPY . /opt/app-root/src/application-ui/
 RUN yum install git -y
 RUN yum --nobest -y update
-RUN cd /opt/app-root/src/application-ui/ && npm ci && npm run build:production
-RUN ls /opt/app-root/src/application-ui
+RUN cd /opt/app-root/src/application-ui/ && npm ci && npm run build:production && npm prune --production
+
+FROM registry.access.redhat.com/ubi8/nodejs-14:1
+# Root needed for yum update, gets reset to 1001 below.
+USER root
+RUN yum -y remove nodejs-nodemon
+RUN yum --nobest -y update
 
 ENV BABEL_DISABLE_CACHE=1 \
     NODE_ENV=production \
     USER_UID=1001
+
+RUN mkdir -p /opt/app-root/src/application-ui
+WORKDIR /opt/app-root/src/application-ui
+
+COPY --from=builder /opt/app-root/src/application-ui.babelrc /opt/app-root/src/application-ui/.babelrc
+COPY --from=builder /opt/app-root/src/application-uiLICENSE /opt/app-root/src/application-ui/LICENSE
+COPY --from=builder /opt/app-root/src/application-uiapp.js /opt/app-root/src/application-ui/app.js
+COPY --from=builder /opt/app-root/src/application-uiconfig /opt/app-root/src/application-ui/config
+COPY --from=builder /opt/app-root/src/application-uicontrollers /opt/app-root/src/application-ui/controllers
+COPY --from=builder /opt/app-root/src/application-uidll /opt/app-root/src/application-ui/dll
+COPY --from=builder /opt/app-root/src/application-uifonts /opt/app-root/src/application-ui/fonts
+COPY --from=builder /opt/app-root/src/application-uigraphics /opt/app-root/src/application-ui/graphics
+COPY --from=builder /opt/app-root/src/application-uilib /opt/app-root/src/application-ui/lib
+COPY --from=builder /opt/app-root/src/application-uimiddleware /opt/app-root/src/application-ui/middleware
+COPY --from=builder /opt/app-root/src/application-uinls /opt/app-root/src/application-ui/nls
+COPY --from=builder /opt/app-root/src/application-uinode_modules /opt/app-root/src/application-ui/node_modules
+COPY --from=builder /opt/app-root/src/application-uipublic /opt/app-root/src/application-ui/public
+COPY --from=builder /opt/app-root/src/application-uisrc-web /opt/app-root/src/application-ui/src-web
+COPY --from=builder /opt/app-root/src/application-uitemplates /opt/app-root/src/application-ui/templates
+COPY --from=builder /opt/app-root/src/application-uiviews /opt/app-root/src/application-ui/views
 
 EXPOSE 3000
 
