refactor unneeded sections
Signed-off-by: chenz4027 <magchen@redhat.com>

--- a/Dockerfile.cypress
+++ b/Dockerfile.cypress
@@ -17,5 +17,6 @@ RUN npm install
 RUN sh download-clis.sh
 
 RUN ["chmod", "+x", "./start-cypress-tests.sh"]
+RUN ["chmod", "+x", "./run-prow-e2e.sh"]
 
 ENTRYPOINT ["./start-cypress-tests.sh"]
