--- a/tests/cypress/config/config.e2e.yaml
+++ b/tests/cypress/config/config.e2e.yaml
@@ -65,7 +65,7 @@ git:
             local: true
             online: false
             matchingLabel: false
-    - enable: true
+    - enable: false
       name: ui-git-ansible
       type: git
       successNumber: 3 #success number includes the two ansible hooks and the ansible regular task
