--- a/Dockerfile.cypress
+++ b/Dockerfile.cypress
@@ -12,11 +12,11 @@ WORKDIR /opt/app-root/src/application-ui
 COPY tests ./tests
 WORKDIR /opt/app-root/src/application-ui/tests
 
+RUN yum install git -y
 RUN npm install 
 
 RUN sh download-clis.sh
 
 RUN ["chmod", "+x", "./start-cypress-tests.sh"]
-RUN ["chmod", "+x", "./run-prow-e2e.sh"]
 
 ENTRYPOINT ["./start-cypress-tests.sh"]
