use generic pull number
Signed-off-by: chenz4027 <magchen@redhat.com>

--- a/Dockerfile.cypress
+++ b/Dockerfile.cypress
@@ -12,7 +12,7 @@ WORKDIR /opt/app-root/src/application-ui
 COPY tests ./tests
 WORKDIR /opt/app-root/src/application-ui/tests
 
-RUN yum install git -y
+RUN npm install git -y
 RUN npm install 
 
 RUN sh download-clis.sh
