--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint --ext .jsx,.js .",
     "lint:fix": "eslint --ext .jsx,.js --fix .",
     "test:unit": "jest --colors",
-    "test": "jest --silent",
+    "test": "jest --verbose",
     "test:watch": "jest --watch",
     "test:update-snapshot": "jest --updateSnapshot",
     "storybook": "start-storybook -p 6006 -s ./public",
@@ -150,7 +150,7 @@
     "svg-loader": "0.0.2",
     "svg-react-loader": "^0.4.6",
     "svg.js": "^2.6.5",
-    "temptifly": "^0.3.36",
+    "temptifly": "^0.3.43",
     "watchr": "^4.0.1",
     "webpack-sources": "^1.1.0",
     "yaml": "^1.7.2",
