Set subscription status to error when we see propagationfailed
Signed-off-by: Feng Xiang <fxiang@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -348,6 +348,7 @@ prop.details.section=Details
 prop.details.section.cluster=Select a cluster to view details
 prop.details.section.cluster.notselected=Not selected by placement rule
 prop.warning.section=Warning
+prop.error.section=Error
 
 props.show.argocd.editor=Launch Argo editor
 props.show.local.yaml=View resource YAML
