--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -626,14 +626,14 @@ tooltip.creation.app.github.desiredCommit = If you want to subscribe to a specif
 tooltip.creation.app.github.tag = If you want to subscribe to a specific tag, you need to specify the tag. If both Git desired commit and tag annotations are specified, the tag is ignored. You might need to specify git-clone-depth annotation if your desired commit of the tag is older than the last 20 commits.
 tooltip.creation.app.github.url = The URL path for the Git repository.
 tooltip.creation.app.github.user = The username if this is a private Git repository and requires connection.
-tooltip.creation.app.github.secret = The name of the secret that is used for authentication by this private Git repository.
+tooltip.creation.app.github.secret = The name of the secret that is used for authentication by this private Git repository. In order to update your credentials, you must update this Secret resource's values.
 tooltip.creation.app.helmrepo.chart.name =  The specific name for the target Helm chart.
 tooltip.creation.app.helmrepo.package.alias = The alias name for the target Helm chart.
 tooltip.creation.app.helmrepo.package.version = The version or versions for the deployable. You can use a range of versions in the form >1.0, or <3.0.
 tooltip.creation.app.helmrepo.password = The password if this is a private Helm repository and requires connection.
 tooltip.creation.app.helmrepo.url = The URL path for the Helm repository.
 tooltip.creation.app.helmrepo.user = The username if this is a private Helm repository and requires connection.
-tooltip.creation.app.helmrepo.secret = The name of the secret that is used for authentication by this private Helm repository.
+tooltip.creation.app.helmrepo.secret = The name of the secret that is used for authentication by this private Helm repository. In order to update your credentials, you must update this Secret resource's values.
 tooltip.creation.app.name = Application name
 tooltip.creation.app.namespace = Set the application namespace from the list of accessible namespaces, or enter a name to create a namespace. You need authority to create namespace resources. 
 tooltip.creation.app.namespace.name = The name of the namespace repository.
@@ -642,7 +642,7 @@ tooltip.creation.app.objectstore.secretkey = The secret key for accessing the ob
 tooltip.creation.app.objectstore.region = The AWS Region of the S3 bucket. This field is required for Amazon S3 buckets only.
 tooltip.creation.app.objectstore.subfolder = The Amazon S3 or MinIO subfolder bucket path. This field is optional for Amazon S3 and MinIO only.
 tooltip.creation.app.objectstore.url = The URL path for the object store.
-tooltip.creation.app.objectstore.secret = The name of the secret that is used for authentication by this repository.
+tooltip.creation.app.objectstore.secret = The name of the secret that is used for authentication by this repository. In order to update your credentials, you must update this Secret resource's values.
 tooltip.creation.app.settings.clusterSelector=Deploy application resources only on clusters matching specified labels
 tooltip.creation.app.settings.existingRule=If available in the application namespace, you can select a predefined placement configuration 
 tooltip.creation.app.settings.localClusters=Deploy application resources on local cluster only
