--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -150,7 +150,7 @@ creation.missing.timeWindow.timezone = Select a timezone to create a time window
 creation.must.select.resource.type = Must select resource type
 creation.ocp.cluster.enter.value = Enter {0}
 creation.ocp.toggle=Application settings
-creation.input.must.not.change = This value must be: '{0}'
+creation.input.must.not.change = This value cannot be modified. Restore the original value in the YAML view to continue: '{0}'
 creation.valid.alphanumeric = Value must be alphanumeric.
 creation.valid.numeric = Value must be integer.
 creation.valid.gitbranch = Value must be valid Git branch.
