Implement support for ROSA IDP
Signed-off-by: Feng Xiang <fxiang@redhat.com>

--- a/tests/cypress/config/users.yaml
+++ b/tests/cypress/config/users.yaml
@@ -3,7 +3,7 @@ users:
   # Users are based on the roles defined in RBAC Test specification
   # Mapping is userRole: username
 
-  cluster-admin: test-cluster-admin
+  cluster-admin-app: test-cluster-admin
   #cluster-admin / cluster-wide
 
   cluster-manager-admin: test-cluster-manager-admin
