--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -30,7 +30,7 @@ git:
         - url: https://dummy/insecureSkipVerifyOption
           username: ""
           token: ""
-          branch: master
+          branch: main
           path: mortgagedc
           insecureSkipVerifyOption: true
           disableAutoReconcileOption: true
@@ -55,7 +55,7 @@ git:
           resources: ["route", "service", "replicaset"] #the type of resources this application must deploy
           username: ""
           token: ""
-          branch: master
+          branch: main
           path: helloworld
           commitHash: 5614bad419abf01ac52bb723914731b091a77ebc #this has to be the private repo hash!
           gitReconcileOption: merge
@@ -68,7 +68,7 @@ git:
           resources: ["pod", "service"] #the type of resources this application must deploy
           username: ""
           token: ""
-          branch: master
+          branch: main
           path: mortgagepod
           tag: v1.0
           timeWindow:
@@ -95,7 +95,7 @@ git:
           resources: ["configmap", "ansiblejob"] #the type of resources this application must deploy
           username: ""
           token: ""
-          branch: master
+          branch: main
           path: ansible
           gitReconcileOption: merge
           ansibleSecretName: ansible-tower-secret
