--- a/tests/cypress/config/config.e2e.yaml
+++ b/tests/cypress/config/config.e2e.yaml
@@ -39,7 +39,7 @@ git:
     - url: ''
       username: ''
       token: ''
-      branch: master
+      branch: main
       path: helloworld
       timeWindow:
         setting: false
