--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -51,7 +51,7 @@ git:
       - url: https://github.com/fxiang1/app-samples.git
         username: ""
         token: ""
-        branch: master
+        branch: main
         path: helloworld
         timeWindow:
           setting: true
@@ -66,7 +66,7 @@ git:
       - url: https://github.com/fxiang1/app-samples.git
         username: ""
         token: ""
-        branch: master
+        branch: main
         path: nginx
         timeWindow:
           setting: true
