--- a/vbh/build-harness/.github/workflows/auto-readme.yml
+++ b/vbh/build-harness/.github/workflows/auto-readme.yml
@@ -1,10 +1,10 @@
 name: 'auto-readme'
 
 on:
-  # Open a PR to update README on merge to master (as necessary)
+  # Open a PR to update README on merge to main (as necessary)
   push:
     branches:
-      - master
+      - main
 
   # Open a PR to update README for all PRs (as necessary)
   pull_request: 
