--- a/tests/cypress/templates/secret_yaml/ansible-secret.yaml
+++ b/tests/cypress/templates/secret_yaml/ansible-secret.yaml
@@ -5,7 +5,7 @@ data:
 kind: Secret
 metadata:
   labels:
-    cluster.open-cluster-management.io/cloudconnection: ""
+    cluster.open-cluster-management.io/credentials: ""
     cluster.open-cluster-management.io/type: ans
   name: ansible-tower-secret
   namespace: default
