Add missing label for chart property
Signed-off-by: Kevin Cormier <kcormier@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -66,6 +66,7 @@ channel.type.label.gitPath = Path
 channel.type.label.targetRevision = Revision
 channel.type.label.noData = Not selected
 channel.type.label.package = Chart name
+channel.type.label.chart = Chart name
 channel.type.label.packageFilterVersion = Package version
 channel.type.label.bucketPath = Subfolder
 channel.type.namespace = Namespace
