Add prototype to argo create wizard
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -53,10 +53,38 @@ application.argo.applicationset = This is a group of Argo applications generated
 
 argo.create.title = Create Argo application set
 argo.basic.info = General
+argo.cluster.decision.resource.title = Cluster decision resource
+argo.cluster.decision.resource.name = Name
+argo.cluster.decision.resource.placeholder = Enter or select a cluster decision resource name
+argo.cluster.decision.requeue.title = Requeue time
 argo.cluster.name = Cluster names
 argo.cluster.placeholder = Enter or select cluster names
+argo.cluster.tooltip = The unique name of your cluster. 
 argo.create.name = Application set name
 argo.create.placeholder = Enter application set name
+argo.destination.name = Name
+argo.destination.server = Server
+argo.destination.namespace = Namespace
+argo.destination.name.placeholder = Enter or select a destination name
+argo.destination.namespace.placeholder = Enter destination namespace
+argo.destination.name.tooltip = Destination name
+argo.destination.namespace.tooltip = Destination namespace
+argo.destination.type = Type
+argo.set.name.tooltip = Argo application set name
+argo.sync.policy.subtitle = Settings used to configure application syncing when there are differences between the desired state and the live cluster state.
+argo.sync.policy.title = Sync Policy
+argo.sync.policy.allow.empty = Allow applications to have empty resources
+argo.sync.policy.apply.out.of.sync.only = Only synchronize out-of-sync resources
+argo.sync.policy.create.namespace = Automatically create namespace if it does not exist
+argo.sync.policy.prune = Delete resources that are no longer defined in Git
+argo.sync.policy.prune.last = Delete resources that are no longer defined in Git at the end of a sync operation
+argo.sync.policy.prune.propagation.policy = Prune propagation policy
+argo.sync.policy.replace = Replace resources instead of applying changes from Git
+argo.sync.policy.self.heal = Automatically sync when cluster state changes
+argo.sync.policy.validate = Disable Kubectl validation
+argo.template.title = Template
+argo.template.source.title = Source
+argo.template.destination.title = Destination
 
 button.cancel = Cancel
 button.copyButton.feedback = Copied to clipboard
