--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -55,8 +55,10 @@ argo.create.title = Create Argo application set
 argo.basic.info = General
 argo.cluster.decision.resource.title = Cluster decision resource
 argo.cluster.decision.resource.name = Name
+argo.cluster.decision.resource.name.tooltip = Cluster decision resource name
 argo.cluster.decision.resource.placeholder = Enter or select a cluster decision resource name
 argo.cluster.decision.requeue.title = Requeue time
+argo.cluster.decision.requeue.title.tooltip = Cluster decision resource requeue time
 argo.cluster.name = Cluster names
 argo.cluster.placeholder = Enter or select cluster names
 argo.cluster.tooltip = The unique name of your cluster. 
