Add github channel
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -71,6 +71,9 @@ argo.destination.name.placeholder = Enter or select a destination name
 argo.destination.namespace.placeholder = Enter destination namespace
 argo.destination.name.tooltip = Destination name
 argo.destination.namespace.tooltip = Destination namespace
+argo.git.target.revision = Revision
+argo.git.target.revision.tooltip = Refer to a single commit
+argo.git.target.revision.placeholder = Enter or select a tracking revision
 argo.destination.type = Type
 argo.set.name.tooltip = Argo application set name
 argo.sync.policy.subtitle = Settings used to configure application syncing when there are differences between the desired state and the live cluster state.
