--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -65,16 +65,22 @@ argo.cluster.tooltip = The unique name of your cluster.
 argo.create.name = Application set name
 argo.create.placeholder = Enter application set name
 argo.destination.name = Name
-argo.destination.server = Server
 argo.destination.namespace = Namespace
 argo.destination.name.placeholder = Enter or select a destination name
 argo.destination.namespace.placeholder = Enter destination namespace
 argo.destination.name.tooltip = Destination name
 argo.destination.namespace.tooltip = Destination namespace
+argo.destination.server = Server
+argo.destination.server.placeholder = Enter or select a destination server
+argo.destination.server.tooltip = Destination server
 argo.git.target.revision = Revision
 argo.git.target.revision.tooltip = Refer to a single commit
 argo.git.target.revision.placeholder = Enter or select a tracking revision
+argo.git.revision.type.placeholder = Enter or select a revision type
+argo.git.revision.type.title = Revision Type
+argo.git.revision.type.tooltip = The revision type on the Git repository.
 argo.destination.type = Type
+argo.destination.type.placeholder = Select destination type
 argo.set.name.tooltip = Argo application set name
 argo.sync.policy.subtitle = Settings used to configure application syncing when there are differences between the desired state and the live cluster state.
 argo.sync.policy.title = Sync Policy
