--- a/Dockerfile.prow
+++ b/Dockerfile.prow
@@ -7,11 +7,9 @@ COPY . /opt/app-root/src/application-ui/
 RUN yum --nobest -y update
 RUN cd /opt/app-root/src/application-ui/ && npm ci && npm run build:production && npm prune --production
 
-FROM registry.access.redhat.com/ubi8/nodejs-14:1
+FROM registry.access.redhat.com/ubi8/ubi-minimal
 # Root needed for yum update, gets reset to 1001 below.
 USER root
-RUN yum -y remove nodejs-nodemon
-RUN yum --nobest -y update
 
 ENV BABEL_DISABLE_CACHE=1 \
     NODE_ENV=production \
