Fetch argoserver ns
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -53,19 +53,18 @@ application.argo.applicationset = This is a group of Argo applications generated
 
 argo.create.title = Create Argo application set
 argo.basic.info = General
-argo.cluster.decision.resource.title = Cluster decision resource
-argo.cluster.decision.resource.name = Name
+argo.cluster.decision.resource.name = Cluster decision resource name
 argo.cluster.decision.resource.name.tooltip = Cluster decision resource name
-argo.cluster.decision.resource.placeholder = Enter or select a cluster decision resource name
+argo.cluster.decision.resource.placeholder = Enter or select a placement rule name
 argo.cluster.decision.requeue.title = Requeue time
-argo.cluster.decision.requeue.title.tooltip = Cluster decision resource requeue time
-argo.cluster.name = Cluster names
-argo.cluster.placeholder = Enter or select cluster names
+argo.cluster.decision.requeue.title.tooltip = Cluster decision resource requeue time in seconds
+argo.server.name = Argo Server
+argo.server.placeholder = Select Argo server to be used
 argo.cluster.tooltip = The unique name of your cluster. 
 argo.create.name = Application set name
 argo.create.placeholder = Enter application set name
 argo.destination.name = Name
-argo.destination.namespace = Namespace
+argo.destination.namespace = Remote namespace
 argo.destination.name.placeholder = Enter or select a destination name
 argo.destination.namespace.placeholder = Enter destination namespace
 argo.destination.name.tooltip = Destination name
@@ -94,6 +93,7 @@ argo.sync.policy.prune.propagation.policy.title = Propagation policy
 argo.sync.policy.replace = Replace resources instead of applying changes from Git
 argo.sync.policy.self.heal = Automatically sync when cluster state changes
 argo.sync.policy.validate = Disable Kubectl validation
+argo.placement.title = Placement
 argo.template.title = Template
 argo.template.source.title = Source
 argo.template.destination.title = Destination
