Show error from subscription in topology details
Signed-off-by: Feng Xiang <fxiang@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -318,6 +318,8 @@ overview.menu.last.update = Last update: {0}
 
 placeholder.filterInput.tags = Add filter tags...
 
+prop.error.section=Error
+
 prop.details.section.service=Service Details
 prop.details.section=Details
 prop.details.section.cluster=Select a cluster to view details
@@ -425,6 +427,7 @@ resource.subscription.local=Subscription deployed on local cluster
 resource.subscription.nostatus.hub= This subscription has no status. If the status does not change to {0} after waiting for initial creation, verify that the multicluster-operators-hub-subscription pod is running on hub.
 resource.subscription.nostatus.remote=This subscription has no status. If the status does not change to {0} after waiting for initial creation, verify that the klusterlet-addon-appmgr pod is running on the remote cluster.
 resource.subscription.placed.error=This subscription was not added to a managed cluster. If this status does not change after waiting for initial creation, ensure the Placement Rule resource is valid and exists in the {0} namespace and that the klusterlet-addon-appmgr pod runs on the managed clusters.
+resource.subscription.status.failed.phase= Some resources failed to deploy. Use View resource YAML link below to view the details.
 resource.subscription.remote=Remote subscriptions
 resource.subscriptionblocked = Time Window Subscription
 resource.nostatus=No status
