update placement selection
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -53,9 +53,9 @@ application.argo.applicationset = This is a group of Argo applications generated
 
 argo.create.title = Create Argo application set
 argo.basic.info = General
-argo.cluster.decision.resource.name = Cluster decision resource name
+argo.cluster.decision.resource.name = Placement resource
 argo.cluster.decision.resource.name.tooltip = Cluster decision resource name
-argo.cluster.decision.resource.placeholder = Enter or select a placement rule name
+argo.cluster.decision.resource.placeholder = Enter or select a placement name
 argo.cluster.decision.requeue.title = Requeue time
 argo.cluster.decision.requeue.title.tooltip = Cluster decision resource requeue time in seconds
 argo.server.name = Argo Server
