--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -62,7 +62,7 @@ argo.cluster.decision.requeue.title = Requeue time
 argo.cluster.decision.requeue.title.tooltip = Cluster decision resource requeue time in seconds
 argo.server.name = Argo server
 argo.server.placeholder = Select the correct Argo server
-argo.cluster.tooltip = The unique name of your cluster. 
+argo.cluster.tooltip = Argo server to deploy Argo App set
 argo.create.name = App set name
 argo.create.placeholder = Enter App set name
 argo.destination.name = Name
