fix argo failure
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/tests/cypress/templates/argocd_yaml/gitopscluster.yaml
+++ b/tests/cypress/templates/argocd_yaml/gitopscluster.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: default
 spec:
   argoServer:
+    cluster: local-cluster
     argoNamespace: openshift-gitops
   placementRef:
     kind: Placement
