Follow the pattern to capitalize the first word
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -53,7 +53,7 @@ application.argo.applicationset = This is a group of Argo applications generated
 application.type.acm = ACM application
 application.type.argo = Argo app set
 
-argo.create.title = Create Argo App set
+argo.create.title = Create Argo app set
 argo.basic.info = General
 argo.cluster.decision.resource.name = Placement resource
 argo.cluster.decision.resource.name.tooltip = Cluster decision resource name
@@ -62,9 +62,9 @@ argo.cluster.decision.requeue.title = Requeue time
 argo.cluster.decision.requeue.title.tooltip = Cluster decision resource requeue time in seconds
 argo.server.name = Argo server
 argo.server.placeholder = Select the correct Argo server
-argo.cluster.tooltip = Argo server to deploy Argo App set
+argo.cluster.tooltip = Argo server to deploy Argo app set
 argo.create.name = App set name
-argo.create.placeholder = Enter App set name
+argo.create.placeholder = Enter app set name
 argo.destination.name = Name
 argo.destination.namespace = Remote namespace
 argo.destination.name.placeholder = Enter or select a destination name
@@ -78,13 +78,13 @@ argo.git.target.revision = Revision
 argo.git.target.revision.tooltip = Refer to a single commit
 argo.git.target.revision.placeholder = Enter or select a tracking revision
 argo.git.revision.type.placeholder = Enter or select a revision type
-argo.git.revision.type.title = Revision Type
+argo.git.revision.type.title = Revision type
 argo.git.revision.type.tooltip = The revision type on the Git repository.
 argo.destination.type = Type
 argo.destination.type.placeholder = Select destination type
-argo.set.name.tooltip = Argo App set name
+argo.set.name.tooltip = Argo app set name
 argo.sync.policy.subtitle = Settings used to configure application syncing when there are differences between the desired state and the live cluster state.
-argo.sync.policy.title = Sync Policy
+argo.sync.policy.title = Sync policy
 argo.sync.policy.allow.empty = Allow applications to have empty resources
 argo.sync.policy.apply.out.of.sync.only = Only synchronize out-of-sync resources
 argo.sync.policy.create.namespace = Automatically create namespace if it does not exist
@@ -94,7 +94,7 @@ argo.sync.policy.prune.propagation.policy = Prune propagation policy
 argo.sync.policy.prune.propagation.policy.title = Propagation policy
 argo.sync.policy.replace = Replace resources instead of applying changes from Git
 argo.sync.policy.self.heal = Automatically sync when cluster state changes
-argo.sync.policy.validate = Disable Kubectl validation
+argo.sync.policy.validate = Disable kubectl validation
 argo.placement.title = Placement
 argo.template.title = Template
 argo.template.source.title = Source
